--- a/src/components/projectList/ProjectList.scss
+++ b/src/components/projectList/ProjectList.scss
@@ -474,6 +474,7 @@
           font-size: 20px;
           left: 0.3rem;
           padding: 0;
+          line-height: 0.75;
         }
         input:checked~label:after{
           left: 1.7rem;
